@@ -1,5 +1,9 @@
 2010-05-18  Alan McGovern  <amcgovern@novell.com>
 
+	* System.Windows.mdp: Update build files.
+
+2010-05-18  Alan McGovern  <amcgovern@novell.com>
+
 	* Makefile.am: Add BinarySearch extension method to IList<T>
 	  so that I can binary search observable collections (and
 	  others).
